[lworld] C2 compilation fails with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required

XMLWordPrintable

      java/lang/invoke/LoopCombinatorLongSignatureTest.java fails with:

      # Internal Error (/oracle/valhallaExp/open/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:665), pid=27820, tid=27838
      # assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required

      Current CompileTask:
      C2: 1053 895 4 java.lang.invoke.MethodHandles::dropArguments0 (113 bytes)

      Stack: [0x00007f7f7c97b000,0x00007f7f7ca7c000], sp=0x00007f7f7ca77290, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xcb88ac] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x4c
      V [libjvm.so+0x1344588] PhaseMacroExpand::process_users_of_allocation(CallNode*)+0x1a8
      V [libjvm.so+0x134d38a] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*)+0x3ca
      V [libjvm.so+0x134dabf] PhaseMacroExpand::eliminate_macro_nodes()+0x59f
      V [libjvm.so+0x134db19] PhaseMacroExpand::expand_macro_nodes()+0x19
      V [libjvm.so+0xa70f42] Compile::Optimize()+0xed2
      V [libjvm.so+0xa724a8] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x11f8
      V [libjvm.so+0x88ef12] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
      V [libjvm.so+0xa7f3e8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x448
      V [libjvm.so+0xa801ef] CompileBroker::compiler_thread_loop()+0x39f
      V [libjvm.so+0x19acdfa] JavaThread::thread_main_inner()+0x1da
      V [libjvm.so+0x19b1fab] Thread::call_run()+0xfb
      V [libjvm.so+0x1576101] thread_native_entry(Thread*)+0x121

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: