8225665: [lworld] C2 compilation fails with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required